Fixes 'Handle oidcng being down'