@@ -9,10 +9,8 @@ import org.junit.Test;
 import org.springframework.http.HttpStatus;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 import static org.junit.Assert.assertEquals;
 
@@ -26,7 +24,7 @@ public class OpenIDConnectConfigurationTest {
         assertEquals(4, tokens.size());
         assertEquals(HttpStatus.NO_CONTENT, openIDConnect.deleteTokens(Collections.emptyList(), new User()));
 
-        openIDConnect.deleteTokens(Arrays.asList(new TokenRepresentation((String) tokens.get(0).getId(), TokenType.ACCESS)), new User());
+        openIDConnect.deleteTokens(List.of(new TokenRepresentation(tokens.get(0).getId(), TokenType.ACCESS)), new User());
 
         tokens = openIDConnect.tokens(new User());
         assertEquals(3, tokens.size());
